# FarmPrecipProject

./: .gitignore  EDA CODE.py  EDACODE.py  FarmIncome.xlsx  FarmIncome_full.csv  FarmIncome_full.xlsx  README.md  VA_State_US copy.xlsx  VA_State_US.xlsx  _quarto.yml  all_state.csv  analysis.html  analysis.ipynb  app.py  big_rainy.csv  combined_farm_precip.csv  documentation.qmd  index.qmd  mergescript.py  pyproject.toml  rain.txt  rain_clean.csv  requirements.txt  scrapefarmincome.py  streamlit_app.py  styles.css  technicalwriteup.qmd  technicalwriteup.tex  tutorial.qmd  usda_scrape.ipynb  ~$FarmIncome_full.xlsx
_freeze/technicalwriteup/execute-results/: html.json
docs/: about.html  analysis.html  documentation.html  index.html  search.json  styles.css  technicalwriteup.html  tutorial.html  usda_scrape.html
docs/scratch_work/: analysis.html  usda_scrape.html
scratch_work/: main.py
src/farm_precip_project/: __init__.py  analysis.py  eda_work.py  scrape_farm.py  scrape_precip.py
tutorial_files/execute-results/: html.json
