[project]
name = "farmprecipproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openpyxl",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
